k8s/filter-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter-service
  template:
    metadata:
      labels:
        app: filter-service
    spec:
      containers:
        - name: filter-service
          image: filter-service:latest
          resources:
             limits:
               cpu: "0.5" 
               memory: "100Mi"
          ports:
          - containerPort: 3002
