k8s/comment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
