k8s/filter-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filter-service
spec:
  selector:
    app: filter-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
